--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "build": "next build",
     "start": "next start"
   },
-  "dependencies": {
+   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "busboy": "1.6.0",
+    "pdf-parse": "1.1.1"
   }
-}
