--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "build": "next build",
     "start": "next start"
   },
-   "dependencies": {
-    "next": "14.1.0",
+  "dependencies": {
+    "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "busboy": "1.6.0",
-    "pdf-parse": "1.1.1"
+    "react-dom": "18.2.0"
   }
+}
