--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "busboy": "1.6.0",
+    "pdf-parse": "1.1.1",
+    "pdfkit": "0.15.0"
   }
 }
